fixed scroll on mobile view

--- a/src/assests/css/base/_global.pcss
+++ b/src/assests/css/base/_global.pcss
@@ -7,7 +7,9 @@ body {
   padding: 0;
   font-family: sans-serif;
   font-family: "Open Sans", sans-serif;
-  overflow: hidden;
+  @mixin atLarge {
+    overflow: hidden;
+  }
 }
 input:focus,
 select:focus,
